# app/Http/Controllers/Api/Courses/Mentor/UpdateCourseController.php
@@ -28,7 +28,7 @@ class UpdateCourseController extends Controller
     *  ),
     *  @OA\RequestBody(
     *    required=true,
-    *    description="Created courses by mentor only: (Get your videos from return payload at /courses/m/video) and (thumbnail from return payload /courses/m/thumnail)",
+    *    description="Update Course created by mentor only: (Get your videos from return payload at /courses/m/video) and (thumbnail from return payload /courses/m/thumnail)",
     *    @OA\JsonContent(
     *      @OA\Property(property="name", type="string", example="estudy course name"),
     *      @OA\Property(property="price", type="number", example=10),
@@ -43,6 +43,8 @@ class UpdateCourseController extends Controller
     *      @OA\Property(property="thumbnail", type="string", example="https://res.cloudinary.com/estudy/image/upload/v1705789451/yofikr4gyecw04sp5ial.png"),
     *      @OA\Property(property="description", type="string", example="estudy course description"),
     *      @OA\Property(property="title", type="string", example={"Title 1", "Title 2"}),
+    *      @OA\Property(property="sub_title", type="string", example={"sub title 1", "Sub title 2"}),
+    *      @OA\Property(property="course_preview", type="string", example="https://res.cloudinary.com/estudy/video/upload/v1705789451/yofikr4gyecw04sp5ial.mp4"),
     *   )
     *  ),
     *  @OA\Response(
@@ -62,11 +64,14 @@ class UpdateCourseController extends Controller
 
         $request->validate([
             'name' => 'required|string',
-            'price' => 'required|integer',
+            'price' => 'nullable',
             'video' => 'required',
             'category' => 'required|string',
             'thumbnail' => 'required',
             'description' => 'required|string',
+            'title' => 'required|array',
+            'sub_title' => 'required|array',
+            'course_preview' => 'required'
         ]);
 
 
@@ -77,6 +82,9 @@ class UpdateCourseController extends Controller
             'thumbnail' => $request->thumbnail,
             'category' => $request->category,
             'description' => $request->description,
+            'title' => $request->title,
+            'sub_title' => $request->sub_title,
+            'course_preview' => $request->course_preview
         ]);
 
         return response()->json([
