# routes/api.php
@@ -7,6 +7,7 @@ use Illuminate\Support\Facades\Route;
 
 use App\Http\Resources\UserFieldResource;
 use App\Http\Controllers\Api\UserController;
+use App\Http\Controllers\Api\PaymentController;
 use App\Http\Controllers\Api\Auth\LoginController;
 use App\Http\Controllers\Api\Auth\LogoutController;
 use App\Http\Controllers\Api\Auth\RegisterController;
@@ -21,10 +22,12 @@ use App\Http\Controllers\Api\Courses\Mentor\CreateCourseController;
 use App\Http\Controllers\Api\Courses\Mentor\DeleteCourseController;
 use App\Http\Controllers\Api\Courses\Mentor\UpdateCourseController;
 use App\Http\Controllers\Api\Courses\Student\EnrollCourseController;
+use App\Http\Controllers\Api\Courses\Student\GetPaidCourseController;
 use App\Http\Controllers\Api\Courses\Student\UnEnrollCourseController;
 use App\Http\Controllers\Api\Courses\Mentor\GetUpdatedCourseController;
 use App\Http\Controllers\Api\Courses\Student\AllEnrollCourseController;
 use App\Http\Controllers\Api\Courses\Mentor\VideoCourseUploadController;
+use App\Http\Controllers\Api\Courses\Mentor\PreviewCourseUploadController;
 use App\Http\Controllers\Api\Courses\Mentor\MentorEnrolledStudentController;
 use App\Http\Controllers\Api\Courses\Mentor\ThumbnailCourseUploadController;
 
@@ -39,6 +42,8 @@ Route::group(['middleware' => 'auth:api'], function() {
 
     Route::patch('/user/profile/all', [ProfileController::class, 'updateProfileAll']);
 
+    Route::patch('/user/profile/bio', [ProfileController::class, 'updateProfileBio']);
+
     Route::delete('/user/delete', [DeleteAccountController::class, 'delete']);
 
     Route::group(['prefix' => 'courses'], function() {
@@ -49,6 +54,7 @@ Route::group(['middleware' => 'auth:api'], function() {
             Route::get('/all', [GetMyCourseController::class, 'getMyCourse']);
             Route::post('/thumbnail', [ThumbnailCourseUploadController::class, 'thumbnailUplaod']);
             Route::post('/video', [VideoCourseUploadController::class, 'videoUpload']);
+            Route::post('/course_preview', [PreviewCourseUploadController::class, 'previewUpload']);
 
             Route::get('/enrolled-students', [MentorEnrolledStudentController::class, 'mentorEnrolledStudents']);
 
@@ -58,14 +64,19 @@ Route::group(['middleware' => 'auth:api'], function() {
         Route::group(['prefix' => 's'], function() {
             Route::get('/all', [AllCourseController::class, 'allCourse']);
             Route::get('/{course}', [GetCourseController::class, 'getCourse']);
+            Route::get('/paid-overview/{course:slug}', [GetPaidCourseController::class, 'getPaidCourse'])->name('paid_overview');
             Route::post('/user/{course}/enroll', [EnrollCourseController::class, 'enrollCourse']);
             Route::post('/user/{course}/unenroll', [UnEnrollCourseController::class, 'unEnrollCoures']);
 
             Route::get('/user/enroll-courses', [AllEnrollCourseController::class, 'allCourseEnrolled']);
         });
     });
+    
+    // payment routes
+    Route::post('/pay', [PaymentController::class, 'initialize']);
+    Route::post('/payment/callback', [PaymentController::class, 'callback'])->name('callback');
+    // end of payment routes
 });
-
 
 Route::group(['prefix' => 'auth'], function() {
     Route::post('signup', [RegisterController::class, 'register']);
